force-app/main/default/objects/fpro__RollupPro_Log__c/fpro__RollupPro_Log__c.object-meta.xml
<CustomObject>
    <description>Logs for RollupPro package</description>
    <label>RollupPro Log</label>
    <nameField>
        <displayFormat>RollupPro Log-{00000}</displayFormat>
        <label>RollupPro Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollupPro Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>