force-app/main/default/objects/fpro__RollupPro_Log__c/fields/fpro__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>fpro__Apex_Job_Id__c</fullName>
    <description>This field is automatically populated with the Salesforce Async Apex Job ID for this job. Use the displayed ID to track the job&apos;s status in Setup &gt; Apex Jobs. Do not modify this field, as it is system-generated and essential for monitoring job progress.</description>
    <inlineHelpText>This field is automatically populated with the Salesforce Async Apex Job ID for this job. Use the displayed ID to track the job&apos;s status in Setup &gt; Apex Jobs. Do not modify this field, as it is system-generated and essential for monitoring job progress.</inlineHelpText>
    <label>Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>