force-app/main/default/objects/fpro__RollupPro_Log__c/fields/fpro__RollupPro__c.field-meta.xml
<CustomField>
    <fullName>fpro__RollupPro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated with a lookup reference to the RollUpPro job associated with this job run. Use this reference for reporting to track and correlate the job with its originating automation process. Do not modify this field, as it is system-generated and critical for accurate reporting.</description>
    <inlineHelpText>This field is automatically populated with a lookup reference to the RollUpPro job associated with this job run. Use this reference for reporting to track and correlate the job with its originating automation process. Do not modify this field, as it is system-generated and critical for accurate reporting.</inlineHelpText>
    <label>RollupPro</label>
    <referenceTo>fpro__RollupPro__c</referenceTo>
    <relationshipLabel>RollupPro Logs</relationshipLabel>
    <relationshipName>RollupPro_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>