force-app/main/default/objects/fpro__RollupPro_Log__c/fields/fpro__Status_Custom__c.field-meta.xml
<CustomField>
    <fullName>fpro__Status_Custom__c</fullName>
    <description>This formula field displays the job status (e.g., Completed, Error, etc.) with an accompanying image for visual appeal. The image dynamically reflects the status, enhancing clarity in reports and list views. The field is system-calculated and cannot be edited.</description>
    <formula>IMAGE( 
CASE(fpro__Status__c, 
&quot;Error&quot;, &quot;/img/msg_icons/error16.png&quot;,
&quot;/img/msg_icons/confirm16.png&quot;), 
&quot;&quot;) 
+
&quot; &quot; + TEXT(fpro__Status__c) + &quot;, &quot; + CreatedBy.Alias + &quot;, &quot; + TEXT(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula field displays the job status (e.g., Completed, Error, etc.) with an accompanying image for visual appeal. The image dynamically reflects the status, enhancing clarity in reports and list views. The field is system-calculated and cannot be edited.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>