force-app/main/default/objects/fpro__RollupPro_Log__c/listViews/fpro__All.listView-meta.xml
<ListView>
    <fullName>fpro__All</fullName>
    <columns>NAME</columns>
    <columns>fpro__Status_Custom__c</columns>
    <columns>fpro__RollupPro__c</columns>
    <columns>fpro__Records_Queried_Master_Object__c</columns>
    <columns>fpro__Records_Updated__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>