force-app/main/default/objects/fpro__RollupPro_Log__c/listViews/fpro__Failed.listView-meta.xml
<ListView>
    <fullName>fpro__Failed</fullName>
    <columns>NAME</columns>
    <columns>fpro__Status_Custom__c</columns>
    <columns>fpro__RollupPro__c</columns>
    <columns>fpro__Records_Queried_Master_Object__c</columns>
    <columns>fpro__Records_Updated__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fpro__Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Failed</label>
</ListView>